--- a/ChangeTrackingDemo/Pages/Shared/_Layout.cshtml
+++ b/ChangeTrackingDemo/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Records/Index">Records</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Students/Index">Students</a>
                         </li>
                     </ul>
                 </div>
